--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-.newspaper{
+.newspaper {
     background-color: antiquewhite;
     font-family: 'Times New Roman';
     font-weight: 700;
 }
 
-.magazine1{
+.magazine1 {
     background-color: rgb(0, 128, 128);
     color: white;
     font-family: Verdana;
@@ -12,40 +12,50 @@
     text-transform: uppercase;
 }
 
-.magazine2{
+.magazine2 {
     background-image: url("images/pink-pattern.png");
     color: fuchsia;
     font-family: Verdana;
     font-weight: 900;
 }
 
-.medium{
+.medium {
     font-size: 20px;
     padding: 8px;
 }
 
-.big{
+.big {
     font-size: 30px;
     padding: 10px;
 }
 
-.reallybig{
+.reallybig {
     font-size: 40px;
     padding: 15px;
 }
 
-.rotateleft{
+.rotateleft {
     transform: rotate(-5deg);
 }
 
-.rotateright{
+.rotateright {
     transform: rotate(5deg);
 }
 
-.skewleft{
+.skewleft {
     transform: skewX(10deg);
 }
 
-.skewright{
+.skewright {
     transform: skewX(-10deg);
+}
+
+#container {
+    position: fixed;
+    top: 25%;
+    left: 45%;
+}
+
+body {
+    background-color: grey;
 }
